# mzapplications

./: .gitignore  README.md
boards/fmuk64f/: Kconfig.defconfig  Kconfig.fmuk64f  board.yml  fmuk64f.dts  fmuk64f.yaml
button/: CMakeLists.txt  app.overlay  prj.conf
button/src/: m_button.c  m_button.h  m_console.c  m_console.h  m_timer.c  m_timer.h  main.c
